# core-api/src/main/resources/static/docs/openapi3.yaml
@@ -7,6 +7,38 @@ servers:
 - url: http://localhost:8082/
 tags: []
 paths:
+  /api/v1/products:
+    post:
+      tags:
+      - Product
+      summary: 상품 등록
+      description: 상품 등록 API
+      operationId: 상품 등록 - 성공
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateProductRequest'
+            examples:
+              상품 등록 - 성공:
+                value: "{\r\n  \"name\" : \"테스트 상품\",\r\n  \"description\" : \"테스트\
+                  \ 상품 설명\",\r\n  \"costPrice\" : 1000,\r\n  \"salesPrice\" : 1500\r\
+                  \n}"
+      responses:
+        "200":
+          description: "200"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse<CreateProductResult>'
+              examples:
+                상품 등록 - 성공:
+                  value: "{\r\n  \"result\" : \"SUCCESS\",\r\n  \"status\" : 200,\r\
+                    \n  \"data\" : {\r\n    \"productId\" : 1,\r\n    \"name\" : \"\
+                    테스트 상품\",\r\n    \"description\" : \"테스트 상품 설명\",\r\n    \"costPrice\"\
+                    \ : 1000,\r\n    \"salesPrice\" : 1500,\r\n    \"status\" : \"\
+                    ACTIVE\"\r\n  },\r\n  \"error\" : null,\r\n  \"timestamp\" : \"\
+                    2025-12-02T02:54:38.402150800Z\"\r\n}"
   /api/v1/accounts/me:
     get:
       tags:
@@ -21,7 +53,7 @@ paths:
         required: true
         schema:
           type: string
-        example: Bearer thisismocktoken
+        example: "Bearer {access-token}"
       responses:
         "200":
           description: "200"
@@ -34,7 +66,7 @@ paths:
                   value: "{\r\n  \"result\" : \"SUCCESS\",\r\n  \"status\" : 200,\r\
                     \n  \"data\" : {\r\n    \"id\" : 1,\r\n    \"email\" : \"test@ecommerce.com\"\
                     ,\r\n    \"name\" : \"testUser\"\r\n  },\r\n  \"error\" : null,\r\
-                    \n  \"timestamp\" : \"2025-11-24T08:16:17.016142700Z\"\r\n}"
+                    \n  \"timestamp\" : \"2025-12-02T02:54:34.090174700Z\"\r\n}"
   /api/v1/accounts/signup:
     post:
       tags:
@@ -69,7 +101,7 @@ paths:
                   value: "{\r\n  \"result\" : \"SUCCESS\",\r\n  \"status\" : 200,\r\
                     \n  \"data\" : {\r\n    \"email\" : \"test@test.com\",\r\n   \
                     \ \"name\" : \"testUser\"\r\n  },\r\n  \"error\" : null,\r\n \
-                    \ \"timestamp\" : \"2025-11-24T08:16:18.290145Z\"\r\n}"
+                    \ \"timestamp\" : \"2025-12-02T02:54:37.523681Z\"\r\n}"
         "400":
           description: "400"
           content:
@@ -81,12 +113,12 @@ paths:
                   value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 400,\r\n\
                     \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
                     이미 사용 중인 이메일입니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-11-24T08:16:18.219142300Z\"\r\n}"
+                    \ : \"2025-12-02T02:54:37.403772600Z\"\r\n}"
                 회원가입 - 실패 - 잘못된 입력값:
                   value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 400,\r\n\
                     \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
                     입력 값이 유효하지 않습니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-11-24T08:16:18.146141800Z\"\r\n}"
+                    \ : \"2025-12-02T02:54:37.273567600Z\"\r\n}"
   /api/v1/auth/login:
     post:
       tags:
@@ -122,7 +154,7 @@ paths:
                     \n  \"data\" : {\r\n    \"id\" : 1,\r\n    \"email\" : \"test@ecommerce.com\"\
                     ,\r\n    \"name\" : \"testUser\",\r\n    \"accessToken\" : \"\
                     thisistesttoken\"\r\n  },\r\n  \"error\" : null,\r\n  \"timestamp\"\
-                    \ : \"2025-11-24T08:16:18.494144200Z\"\r\n}"
+                    \ : \"2025-12-02T02:54:37.890677700Z\"\r\n}"
         "400":
           description: "400"
           content:
@@ -134,7 +166,7 @@ paths:
                   value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 400,\r\n\
                     \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
                     비밀번호가 일치하지 않습니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-11-24T08:16:18.558142800Z\"\r\n}"
+                    \ : \"2025-12-02T02:54:38.004677Z\"\r\n}"
         "404":
           description: "404"
           content:
@@ -146,7 +178,7 @@ paths:
                   value: "{\r\n  \"result\" : \"ERROR\",\r\n  \"status\" : 404,\r\n\
                     \  \"data\" : null,\r\n  \"error\" : {\r\n    \"message\" : \"\
                     존재하지 않는 계정입니다.\",\r\n    \"data\" : null\r\n  },\r\n  \"timestamp\"\
-                    \ : \"2025-11-24T08:16:18.617143300Z\"\r\n}"
+                    \ : \"2025-12-02T02:54:38.098680Z\"\r\n}"
 components:
   schemas:
     LoginRequest:
@@ -258,6 +290,27 @@ components:
         status:
           type: number
           description: HTTP 상태 코드
+    CreateProductRequest:
+      title: CreateProductRequest
+      required:
+      - costPrice
+      - description
+      - name
+      - salesPrice
+      type: object
+      properties:
+        salesPrice:
+          type: number
+          description: 판매가
+        costPrice:
+          type: number
+          description: 원가
+        name:
+          type: string
+          description: 상품 이름
+        description:
+          type: string
+          description: 상품 설명
     ApiResponse<LoginResult>:
       title: ApiResponse<LoginResult>
       required:
@@ -291,6 +344,54 @@ components:
             email:
               type: string
               description: 계정 이메일
+          description: 응답 데이터
+        timestamp:
+          type: string
+          description: 응답 생성 시간
+        status:
+          type: number
+          description: HTTP 상태 코드
+    ApiResponse<CreateProductResult>:
+      title: ApiResponse<CreateProductResult>
+      required:
+      - data
+      - error
+      - result
+      - status
+      - timestamp
+      type: object
+      properties:
+        result:
+          type: string
+          description: 요청 결과 (SUCCESS/ERROR)
+        data:
+          required:
+          - costPrice
+          - description
+          - name
+          - productId
+          - salesPrice
+          - status
+          type: object
+          properties:
+            productId:
+              type: number
+              description: 상품 ID
+            salesPrice:
+              type: number
+              description: 판매가
+            costPrice:
+              type: number
+              description: 원가
+            name:
+              type: string
+              description: 상품 이름
+            description:
+              type: string
+              description: 상품 설명
+            status:
+              type: string
+              description: 상품 상태
           description: 응답 데이터
         timestamp:
           type: string
